--- a/src/css/_search.scss
+++ b/src/css/_search.scss
@@ -1,5 +1,4 @@
 coprocure-search {
-  margin: 30px 0;
   display: block;
 
   /* overrides defined after review on MARC page */
